--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -132,8 +132,13 @@ ul b{
 a.btn:hover {
   background: #0D95D0;
   color: #fff;
-	box-shadow: 0px 2px 0px #096F9B;
-	transform: translateY(2px);
+	box-shadow: 0px 2px 10px #096F9B;
+	/*transform: translateY(2px);*/
+}
+
+cs-style-2 figcaption{
+	width:100%;
+
 }
 
 figcaption a {
@@ -154,7 +159,7 @@ a.btn, a.btn:visited {
     font-size: 16px;
     transition: all 0.3s ease 0s;
     font-weight: 300;
-		box-shadow: 0px 4px 2px #0D91d0;
+		box-shadow: 0px 0px 0px #0D91d0;
 }
 
 .grid {
@@ -179,12 +184,12 @@ a.btn, a.btn:visited {
 	position: relative;
 }
 
-.grid figure figcaption,
+.no-touch .grid figure figcaption,
 .cs-style-2 figure.cs-hover figcaption{
   transition: all 0.3s ease 0s;
 }
 
-.grid figure:hover figcaption,
+.no-touch .grid figure:hover figcaption,
 .cs-style-2 figure.cs-hover figcaption{
   opacity: 1;
   transition: all 0.4s;
